Bugfixes and loan settings, periods and application
